# NovaScan

./: .gitignore  CLAUDE.md  GITHUB_SETUP.md  LICENSE  Makefile  README.md  RHDP_PROPOSAL.md  SKILLS.md  pyproject.toml
.claude/commands/: generate.md  scan.md
.githooks/: pre-commit
.github/workflows/: ci.yaml
results/: all-local-repos.yaml  deepfield.yaml  geolux.yaml  launchpad.yaml  platform-dashboard.yaml  red_hat_intel_partner_demo.yaml  stargate-platform.yaml
src/checksum/: __init__.py  cli.py  generator.py  output.py  planner.py  scanner.py  validator.py
src/checksum/detectors/: __init__.py  concurrency.py  helm.py  infrastructure.py  k8s_manifests.py  llm_imports.py  model_names.py
src/novascan/: __init__.py  catalog.py  cli.py  generator.py  parsing.py  planner.py  scanner.py  validator.py
src/novascan/detectors/: helm.py  infrastructure.py  k8s_manifests.py
tests/: conftest.py  test_detectors.py  test_e2e.py  test_generator.py  test_k8s_parsing.py  test_package.py  test_planner.py  test_scanner.py  test_validator.py  test_warnings.py  validation_matrix.yaml
