[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rhdp-checksum"
version = "0.1.0"
description = "RHDP capacity planner — scan demo repos, recommend provisioning tiers"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Jonathan Kershaw", email = "jkershaw@redhat.com" },
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
checksum = "checksum.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
